# app/Models/Barang.php
@@ -10,12 +10,13 @@ use Laravel\Scout\Searchable;
  * @OA\Schema(
  * description="Barang model",
  * title="Barang model",
- * @OA\Property(property="satuan_id", type="string", format="satuan_id", description="id satuan" ),
+ * @OA\Property(property="satuan_id", type="integer", format="satuan_id", description="id satuan" ),
  * @OA\Property(property="kd_barang", type="string", format="kd_barang", description="kode barang"),
  * @OA\Property(property="nama", type="string", format="nama", description="nama barang"),
  * @OA\Property(property="harga", type="string", format="harga", description="harga barang"),
  * @OA\Property(property="qr", type="string", format="qr", description="qr barang"),
- * @OA\Property(property="qty", type="string", format="qty", description="quantity barang"),
+ * @OA\Property(property="qty", type="integer", format="qty", description="quantity barang"),
+ * @OA\Property(property="gambar", type="string", format="gambar", description="Link gambar"),
  * 
  * )
  */
